--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "A AWS Bedrock se concentra em AI Generative"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "awscli>=1.38.4",
+    "boto3>=1.37.4",
+]
 
 [dependency-groups]
 dev = [
